<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
<variable
    name="myViewModel"
    type="com.example.ragistrationform.viewModel.MainActivityViewModel" />
    </data>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
<ImageView
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_height="80dp"
    android:layout_width="80dp"
    android:id="@+id/img"
    android:src="@drawable/img_2"
    android:layout_marginBottom="15dp"

    />
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="Log Out"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/img"
                android:layout_marginTop="20dp"
                android:id="@+id/logout"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="12dp"
                android:text="@{myViewModel.setUsername()}"
                android:id="@+id/tv1" />
            <!--first name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/f_name"
                android:id="@+id/TL1"
                app:layout_constraintTop_toBottomOf="@+id/img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"
                app:counterMaxLength="8"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fname"
                    android:inputType="textCapSentences"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--middle name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:hint="@string/m_name"
                android:id="@+id/TL2"
                app:layout_constraintTop_toBottomOf="@+id/TL1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterMaxLength="8">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mname"
                    android:inputType="textCapSentences"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    last name-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/l_name"
                android:id="@+id/TL3"
                app:layout_constraintTop_toBottomOf="@+id/TL2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterMaxLength="8"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lname"
                    android:inputType="textCapSentences"
                    android:maxLength="8" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--contact-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/contact"
                android:id="@+id/TL4"
                app:layout_constraintTop_toBottomOf="@id/TL3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterMaxLength="10"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"
                app:prefixText="+91"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/number"
                    android:inputType="number"
                    android:maxLength="10" />
                <!--    date of birth-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/dob"
                android:id="@+id/TL5"
                app:layout_constraintTop_toBottomOf="@+id/TL4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/dob"
                    android:textColor="#000000"
                    android:inputType="none"
                    android:focusable="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="38dp"
                android:src="@drawable/img"
                android:scaleType="fitCenter"
                android:id="@+id/calender"
                app:layout_constraintTop_toTopOf="@id/TL5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/TL5"
                android:layout_marginRight="20dp" />
            <!--    address-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/add"
                android:id="@+id/TL6"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TL5"
                app:counterMaxLength="40"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    mail id-->

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/mail"
                android:id="@+id/TL7"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TL6"
                app:counterMaxLength="30"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/mail"
                    android:inputType="textEmailAddress"
                    android:maxLength="30" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--    adhaar card-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/aadhar_no"
                android:id="@+id/TL8"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterMaxLength="4"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"
                app:layout_constraintTop_toBottomOf="@+id/TL7"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aadharNo"
                    android:inputType="number"
                    android:maxLength="4" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--pan card-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/pan_no"
                android:id="@+id/TL9"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:counterMaxLength="10"
                app:helperText="required field!"
                app:helperTextTextColor="#FF0000"

                app:layout_constraintTop_toBottomOf="@+id/TL8"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/panNo"
                    android:inputType="textCapCharacters"
                    android:maxLength="10" />
            </com.google.android.material.textfield.TextInputLayout>
            <!--    gender-->
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gen"
                android:textSize="20sp"

                android:id="@+id/TL10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TL9" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="5"
                android:orientation="horizontal"
                android:id="@+id/rg_gender"
                android:layout_margin="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TL10">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Male"
                    android:id="@+id/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Female"
                    android:id="@+id/female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Others"
                    android:id="@+id/others" />
            </RadioGroup>
            <!--    submit button-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:textSize="20sp"
                android:id="@+id/TL11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rg_gender" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="JavaScript"
                android:id="@+id/cb1"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/TL11"

                />

            <CheckBox
                android:id="@+id/cb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="PHP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cb1"
                app:layout_constraintTop_toBottomOf="@+id/TL11" />
            <!--    courses row 2-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C"
                android:layout_weight="1"
                android:id="@+id/cb3"
                app:layout_constraintTop_toBottomOf="@+id/cb1"
                app:layout_constraintStart_toStartOf="@id/cb1"

                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C++"
                android:layout_weight="1"
                android:id="@+id/cb4"
                app:layout_constraintTop_toBottomOf="@+id/cb2"
                app:layout_constraintStart_toStartOf="@id/cb2" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Python"
                android:layout_weight="1"
                android:id="@+id/cb5"
                app:layout_constraintTop_toBottomOf="@+id/cb3"
                app:layout_constraintStart_toStartOf="@id/cb1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="C#"
                android:layout_weight="1"
                android:id="@+id/cb6"
                app:layout_constraintTop_toBottomOf="@+id/cb4"
                app:layout_constraintStart_toStartOf="@id/cb2" />

            <!--    courses 4-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Java"
                android:layout_weight="1"
                android:id="@+id/cb7"
                app:layout_constraintTop_toBottomOf="@+id/cb5"
                app:layout_constraintStart_toStartOf="@id/cb1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kotlin"
                android:layout_weight="1"
                android:id="@+id/cb8"
                app:layout_constraintTop_toBottomOf="@+id/cb6"
                app:layout_constraintStart_toStartOf="@id/cb2" />

            <!--    courses 5-->

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Go"
                android:layout_weight="1"
                android:id="@+id/cb9"
                app:layout_constraintTop_toBottomOf="@+id/cb7"
                app:layout_constraintStart_toStartOf="@id/cb1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ruby"
                android:layout_weight="1"
                android:id="@+id/cb10"
                app:layout_constraintTop_toBottomOf="@+id/cb8"
                app:layout_constraintStart_toStartOf="@id/cb2" />
            <!--submit btn-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:id="@+id/submit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cb10" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>